--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@tarojs/taro": "3.6.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-refresh": "^0.11.0"
+    "react-refresh": "^0.11.0",
+    "taro-ui": "^3.3.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
