--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "dist/",
   "projectname": "lightroom-beike",
   "description": "贝壳投资",
-  "appid": "wxdbfb26b8c6af58f5",
+  "appid": "wx9f34c060063d6804",
   "setting": {
     "urlCheck": false,
     "es6": false,
